--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
   "devDependencies": {
     "@babel/plugin-transform-private-methods": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-numeric-separator": "^7.21.11",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.21.11",
+    "@babel/plugin-transform-class-properties": "^7.21.11",
+    "@babel/plugin-transform-optional-chaining": "^7.21.11",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "gh-pages": "^6.1.1",
