--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,12 +36,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-class-properties": "^7.21.11",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.21.11",
+    "@babel/plugin-transform-numeric-separator": "^7.21.11",
+    "@babel/plugin-transform-optional-chaining": "^7.21.11",
     "@babel/plugin-transform-private-methods": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-numeric-separator": "^7.21.11",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.21.11",
-    "@babel/plugin-transform-class-properties": "^7.21.11",
-    "@babel/plugin-transform-optional-chaining": "^7.21.11",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "gh-pages": "^6.1.1",
