--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,8 @@ jobs:
 
     - run: npm ci
     - run: npm run build --if-present
+      env:
+        NODE_OPTIONS: --openssl-legacy-provider  # Add this line
     - run: npm test
 
     - name: Deploy with gh-pages
